--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   <!-- JavaScript Bundle with Popper -->
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="../js/main.js"></script>
 
   <!-- CSS PROPIO-->
   <link rel="stylesheet" href="../css/style.css">
