--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   <script src="js/main.js"></script>
 
   <!-- CSS PROPIO-->
-  <link rel="stylesheet" href="../css/estilos.css">
+  <link rel="stylesheet" href="./css/estilos.css">
 
   <!--SCRIPT AOS CSS-->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
