--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
-              <img class="logoNav d-inline-block align-text-top" src="../images/Logo_original_optimizado.png"
+              <img class="logoNav d-inline-block align-text-top" src="./images/Logo_original_optimizado.png"
                 alt="Logo Flexibilidad Integral Cordoba">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
